# nativeSign-rust-wasm-seal

./: Cargo.toml  README.md  build.bat  build.sh  compare_report.txt  index.html  sample.ofd  test_auto_load.html  verify_err.txt  verify_out.txt  verify_warn.txt  电子签的问题答疑.md
.cargo/: config.toml
.workbuddy/memory/: 2026-07-06.md  2026-07-09.md  2026-07-10.md  2026-07-14.md  MEMORY.md
js/: ofd_plugin.js
mock_data/: mock_ec_cert.der  mock_ec_key.der  mock_rsa_cert.der  mock_rsa_key.der
pdfium/release/: package.json
pdfium/release/node/: index.html
scripts/: _inspect_font.py  analyze_pdf.py  download_example.py  embed_cjk_font.py  find_pdfium_init.py  gen_mock_cert.py  gen_test_pdf.py  gen_uni2cid.py  generate_ofd.py  generate_ofd_with_images.py  generate_test_ofd.py  run_analyze.py  verify_glyphs.py
src/: crypto.rs  der.rs  engine.rs  font_embed.rs  font_provider.rs  lib.rs  mock_seal_png.rs  ofd_parser.rs  ofd_sign.rs  pkcs7.rs  render.rs  seal.rs  ses.rs  sign.rs  types.rs  ukey.rs  utils.rs
tools/: compare_extract.py  inspect2.py  inspect_content.py  inspect_font.py  inspect_ft8.py  node_test_embed.cjs  test_contents_search.cjs  test_crypto_real.cjs  test_ses_struct.cjs  verify_embedded.py  verify_radical.py  verify_text.py
tools/verify_embed/: Cargo.toml
tools/verify_embed/src/: main.rs
tools/verify_font/: Cargo.toml
tools/verify_font/src/: main.rs
