[package]
name = "dianju-wasm-seal"
version = "0.1.0"
edition = "2021"
description = "点聚版式文档签章引擎 - Rust WASM 重构版"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "FileReader",
    "File",
    "HtmlInputElement",
    "FormData",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Crypto",
    "SubtleCrypto",
    "ImageData",
    "CanvasRenderingContext2d",
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
# getrandom 0.2 (直接依赖)
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 被间接依赖拉入, 必须显式启用 wasm_js
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
hex = "0.4"
flate2 = "1.0"
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# SM2/SM3/SM4 国密算法（纯 Rust 实现）
libsm = "0.6"

# 异步运行时
wasm-bindgen-futures = "0.4"
futures = "0.3"

# PDF 渲染引擎 — Rust 绑定 Google PDFium
pdfium-render = "0.9.2"

# PDF 解析与编辑 — 用于运行时自动嵌入中文字体 (方案 A)
lopdf = "0.34"

# Unicode 归一化 — 把 CJK 兼容区码点 (U+F900~FAFF, 如 不→U+FA17) 归一为
# 标准 CJK 统一汉字 (U+4E0D), 使方案 A 的字符码改写命中 uni2cid.bin 中已有的标准 CID。
unicode-normalization = "0.1"

# OFD 文档解析 — XML + ZIP
quick-xml = "0.37"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# X.509 证书解析 — 从 PDF 签名字典中提取证书信息
x509-parser = "0.16"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
